A long, long overdue integration of all our recent hard work out to the open-source project. I will now generate and post a new snapshot build.
What's new:
 * Functions and Predicates each implement eq()/hC()/tS() and are serializable
 * Functions: toHashCode(), toStringFunction() (replaces TO_STRING)
 * Predicates: notNull, isSameAs(), in(), compose()
 * Sets: newSetFromMap(), newWeakHashSet(), newSoftHashSet(), newEnumSet()
 * Itera...s: size(), isEmpty(), limit(), skip(), getLast()
 * Iterators: emptyListIterator(); peekingIterator() (returning new
   PeekingIterator interface)
 * Ordering: like "Comparator++"; has max(), min(), sort(), sortedCopy(),
   binarySearch(), reverseOrder(); Comparators methods return these now
 * ObjectArrays: newArray(T[], int)
 * Suppliers: ofInstance(), compose(), memoize()
 * ImmutableList class (replaces Lists.immutableList())
 * ImmutableSet class (replaces Sets.immutableSet())

Lots of hard work done by Jared Levy, Jesse Wilson, Chris Povirk, Mick
Killianey, myself and others.